[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "firecrest"

[project]
name = "pyfirecrest"
dynamic = ["version"]
authors = [{name = "CSCS Swiss National Supercomputing Center"}]
license = {text = "BSD 3-Clause"}
description = "pyFirecrest is a python wrapper for FirecREST"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/eth-cscs/pyfirecrest"}
requires-python = ">=3.7"
dependencies = ["requests>=2.14.0", "PyJWT>=2.4.0", "click"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
testing = [
    "httpretty>=1.0.3",
    "pytest>=5.3",
]
docs = [
    "sphinx>=3.0.0",
    "sphinx_rtd_theme",
]

[project.scripts]
firecrest = "firecrest.cli:main"

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.ruff]
line-length = 210
extend-select = ["RUF"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
