[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "firecrest"

[project]
name = "pyfirecrest"
dynamic = ["version"]
description = "pyFirecrest is a python wrapper for FirecREST"
authors = [{name = "CSCS Swiss National Supercomputing Center"}]
maintainers = [
    {name = "Eirini Koutsaniti", email = "eirini.koutsaniti@cscs.ch"},
    {name = "Juan Pablo Dorsch", email = "juanpablo.dorsch@cscs.ch"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "aiofiles>=23.2.1",
    "requests>=2.14.0",
    "PyJWT>=2.4.0",
    "typer[all]>=0.7.0,<1.0.0",
    "packaging>=21.0",
    "httpx>=0.24.0",
    "PyYAML>=5.1"
]

[project.urls]
Homepage = "https://pyfirecrest.readthedocs.io"
Documentation = "https://pyfirecrest.readthedocs.io"
Repository = "https://github.com/eth-cscs/pyfirecrest"

[project.scripts]
firecrest = "firecrest.cli_script:main"

[project.optional-dependencies]
test = [
    "pytest>=5.3",
    "flake8~=5.0",
    "mypy~=0.991",
    "types-aiofiles~=23.2.0.0",
    "types-requests~=2.28.11",
    "pytest-httpserver~=1.0.6",
    "pytest-asyncio>=0.21.1",
    "types-PyYAML>=5.1"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.16",
    "sphinx-autobuild>=2021.0",
    "sphinx-click==3.0.2"
]
dev = [
    "unasync"
]

[tool.mypy]
show_error_codes = true
strict = false
exclude = [
    "^docs/.*py$",
    "^tests/.*py$",
]

[[tool.mypy.overrides]]
module = [
    "rich.*",
]
ignore_missing_imports = true
